# nightfire

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  audio.md  lumi  lumi.service
audio_processing/: Cargo.toml  pi-blaster
audio_processing/src/: #gpio.rs#  common.rs  gpio.rs  jack_interface.rs  main.rs  piblaster.rs  ui.rs
beat_trainer/: README.md  beat_analysis.ipynb  conv_train.ipynb  model.pickle  tap_train.ipynb
beat_trainer/src/nf_train/: data.py
bpm_tapper/: Cargo.toml  README.md
bpm_tapper/src/: jack.rs  main.rs  ui.rs
client/: package-lock.json  package.json
client/src/: App.css  App.js  Dashboard.js  ManualLightSetter.js  index.js  listItems.js  routes.js  style.js
client/src/views/: ManualMode.js  OffMode.js  PinkPulseMode.js  RainbowMode.js
confs/: debug.yaml  release.yaml
docs/: audio_processing.md  beat_detection.md  ideas.md  old_ideas.md
mixxx_data/: Cargo.toml  README.md  build.rs
mixxx_data/src/: beats.rs  data_processor.rs  db.rs  main.rs  track_info.rs
nf_audio/: Cargo.toml
nf_audio/src/: lib.rs
nf_eq/: Cargo.toml
nf_eq/src/: conf.rs  jack.rs  main.rs  ui.rs
nf_ir/: Cargo.toml
nf_ir/data/: analysis.ipynb  output2.txt  output3.txt  output_all_44.txt  output_all_44_2.txt
nf_ir/src/: ir_pulse_reader.rs  lib.rs  main.rs
nf_lichtspiel/: Cargo.toml  README.md
nf_lichtspiel/src/: conf.rs  default_mode.rs  inactivity.rs  jack.rs  lib.rs  lightid.rs  mode.rs  periodic_updater.rs  piblaster.rs  util.rs
nf_lichtspiel/src/light/: color.rs  coord.rs  mod.rs  pattern_generator.rs
nf_lichtspiel/src/mode/: auto.rs  double_blob.rs  high_low.rs  manual.rs  mod.rs  mode_switcher.rs
nf_lichtspiel/src/osc/: mod.rs  osc_sender.rs
nf_lichtspiel/src/sixaxis/: controller.rs  mod.rs  state_updater.rs
nf_lichtspiel/src/ui/: eq.rs  mod.rs  piston.rs
nf_monitor/: Cargo.toml
nf_monitor/src/: main.rs  monitor.rs  ui.rs
nf_osc/: Cargo.toml
nf_osc/src/: main.rs
nightfire/: .gitignore  Cargo.toml  test.py
nightfire/confs/: debug.yaml
nightfire/src/: audio.rs  clock.rs  inactivity.rs  lib.rs  lightid.rs  tapper.rs
nightfire/src/audio/: audio_events.rs  audio_features.rs  edge_detector.rs  filter.rs  filter_ft.rs  hit_detector.rs  intensity.rs  jack.rs  mod.rs  onset.rs  phrase_detector.rs  queue_sample_handler.rs  running_stats.rs  sample_handler.rs  signal_processor.rs  silence_detector.rs
nightfire/src/audio/processors/: edge_detector.rs  hit_detector.rs  intensity.rs  mod.rs  onset_detector.rs  phrase_detector.rs  running_stats.rs  silence_detector.rs
nightfire/src/audio/processors/primitives/: mod.rs
nightfire/src/audio/sample_handler/: default_sample_handler.rs  mod.rs  queue_sample_handler.rs
nightfire/src/light/: cmap.rs  color.rs  coord.rs  cprov.rs  envelope.rs  layer.rs  mask.rs  mod.rs  state.rs
nightfire/src/osc/: mod.rs  osc_sender.rs
nightfire/src/ui/: eq.rs
nightfire_audio/: Cargo.toml
nightfire_audio/src/: lib.rs
server/: Cargo.toml  conf.yaml  debug-conf.yaml
server/confs/: debug.yaml
server/src/: audio_processing.rs  conf.rs  controller.rs  effects.rs  envelope.rs  graphql.rs  jack.rs  lib.rs  lightid.rs  main.rs  mask.rs  models.rs  osc_receiver.rs  piblaster.rs  piston.rs  state.rs
server/src/modes/: controllermode.rs  lightsource.rs  manual.rs  mod.rs  off.rs  pinkpulse.rs  rainbow.rs
server/src/osc/: mod.rs  osc_sender.rs
server/src/sixaxis/: mod.rs  osc_sender.rs  state_updater.rs
src/: audio_processing.rs  ball_animation.rs  conf.rs  coord.rs  jack.rs  lib.rs  lightid.rs  manual.rs  mask.rs  models.rs  piblaster.rs  piston.rs  state.rs
src/audio/: mod.rs
src/light/: color.rs  coord.rs  cprov.rs  envelope.rs  layer.rs  lightid.rs  manual.rs  mask.rs  mod.rs  state.rs
src/modes/: controllermode.rs  manual.rs  mod.rs
src/osc/: mod.rs  osc_sender.rs
src/sixaxis/: state_updater.rs
src/ui/: eq.rs  mod.rs  piston.rs
