[package]
name = "synesthesizer"
version = "0.1.0"
authors = ["Felix Hennig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple-logging = "2.0"
jack = "0.6"
clap = "2.33.0"
rustfft = "3.0.0"
conrod = "0.61.1"
piston_window = "0.98.0"
triple_buffer = "5.0.1"
