[package]
name = "bpm_tapper"
version = "0.1.0"
authors = ["Felix hennig <mail@felixhennig.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nightfire = { path = "../nightfire" }
# ui
piston_window = "0.107.0"
# stoppable thread
stoppable_thread = "0.2.1"
