[package]
name = "mixxx_data"
version = "0.1.0"
authors = ["Felix hennig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# signal processing
nightfire_audio = { path = "../nightfire_audio" }
# loading from mixxx db
sqlite = "0.24"
prost = "0.6"
# audio file loading
rodio = "0.11.0"
# saving to numpy format
npy = "0.4"
npy-derive = "0.4"
