[package]
name = "mixxx_data"
version = "0.2.2"
authors = ["Felix hennig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nightfire = { path = "../nightfire" }
# arg parsing
clap = "2.33"
dirs = "2.0.2"
# loading from mixxx db
sqlite = "0.24"
prost = "0.6"
# audio file loading
rodio = "0.11.0"
# saving to pickle format
serde = { version  = "1.0", features = ["derive"] }
serde-pickle = "0.6"
# parallelism
rayon = "1.3"
# commandline progress bar
indicatif = "0.14"
