[package]
name = "nf_audio"
version = "0.1.0"
authors = ["Felix hennig <mail@felixhennig.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
log = "0.4"
# stoppable thread
stoppable_thread = "0.2.1"
# audio
# cpal = { version = "0.13", features = [ "asio" ] }
cpal = "0.13"
