[package]
name = "nf_lichtspiel"
version = "0.2.0"
authors = ["Felix Hennig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
nightfire = { path = "../nightfire" }
nf_audio = { path = "../nf_audio" }
# commandline parsing
clap = "2.33.0"
# config file
yaml-rust = "0.4"
# logging
log = "0.4"
env_logger = "0.7.1"
# stoppable thread
stoppable_thread = "0.2.1"
# partwise functions for envelopes
splines = "3.0"
# color models
palette = "0.5.0"
# ui
piston_window = "0.107.0"
# controller
hidapi = { version = "1.2.1", features = ["linux-static-hidraw"], default-features = false }
# network
rosc = "0.3"
#
rand = "0.7.3"
