[package]
name = "nf_lichtspiel"
version = "0.2.0"
authors = ["Felix Hennig"]
edition = "2018"

[features]
default = ["pi-blaster", "ir-remote"]
pi-blaster = []
ir-remote = []

piston-ui = ["piston_window"]

[dependencies]
# internal
nightfire = { path = "../nightfire" }
nf_audio = { path = "../nf_audio" }
# commandline parsing
clap = "2.33.0"
# config file
yaml-rust = "0.4.5"
# logging
log = "0.4"
env_logger = "0.7.1"
# stoppable thread
stoppable_thread = "0.2.1"
# partwise functions for envelopes
splines = "3.0"
# color models
palette = "0.5.0"
# ui
piston_window = { version = "0.117.0", optional = true }
# controller
hidapi = { version = "1.2.1", features = ["linux-static-hidraw"], default-features = false }
# network
rosc = "0.3"
#
rand = "0.7.3"

pi_ir_remote = "0.1.0"