[package]
name = "nf_osc"
version = "0.1.0"
authors = ["Felix Hennig <mail@felixhennig.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
nightfire = { path = "../nightfire" }
nf_audio = { path = "../nf_audio" }
# commandline parsing
clap = "3.0.0-beta.2"
# logging
log = "0.4"
env_logger = "0.8.2"
# stoppable thread
stoppable_thread = "0.2.1"
rosc = "~0.5"
text_io = "0.1.8"