[package]
name = "nightfire"
version = "0.2.0"
authors = ["Felix Hennig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
log = "0.4"
env_logger = "0.7.1"
# partwise functions for envelopes
splines = "3.0"
# color models
palette = "0.5.0"
