[package]
name = "lumi"
version = "0.1.0"
authors = ["Felix Hennig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
juniper = "0.14"
juniper_iron = "0.6"
iron = "0.6"
mount = "0.4"
splines = "3.0"
rand = "0.7"
staticfile = "*"
clap = "2.33.0"
palette = "0.5.0"
stoppable_thread = "0.2.1"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.7.1"
piston_window = "0.107.0"
hidapi = "1.2.0"
rosc="0.3"
